--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -50,3 +50,34 @@
   font-weight: 700;
   src: url("/fonts/Nunito-700.woff2") format("woff2");
 }
+
+@layer base {
+  :root {
+    --gray1: #fcfcfc;
+    --gray2: #f9f9f9;
+    --gray3: #f0f0f0;
+    --gray4: #e8e8e8;
+    --gray5: #e0e0e0;
+    --gray6: #d9d9d9;
+    --gray7: #cecece;
+    --gray8: #bbbbbb;
+    --gray9: #8d8d8d;
+    --gray10: #838383;
+    --gray11: #646464;
+    --gray12: #202020;
+  }
+
+  .dark {
+    --gray1: #111111;
+    --gray2: #191919;
+    --gray3: #222222;
+    --gray4: #2a2a2a;
+    --gray5: #313131;
+    --gray6: #3a3a3a;
+    --gray7: #484848;
+    --gray8: #606060;
+    --gray9: #6e6e6e;
+    --gray11: #b4b4b4;
+    --gray12: #eeeeee;
+  }
+}
